--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
   </head>
   <body>
     <div class="container">
-      <p class="result"></p>
-      <input type="text" />
+      <div class="previous"></div>
+      <div class="current"></div>
       <div class="buttons">
         <button>1</button>
         <button>2</button>
         <button>3</button>
         <button>Clear</button>
-        <button>=</button>
+        <button class="equals">=</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
         <button>x</button>
-        <button>/</button>
+        <button class="divide">/</button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button>+</button>
-        <button>-</button>
+        <button class="add">+</button>
+        <button class="subtract">-</button>
         <button>0</button>
+        <button class="dot">.</button>
       </div>
     </div>
 
