added a delete button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button>2</button>
         <button>3</button>
         <button>Clear</button>
-        <button class="equals">=</button>
+        <button>Delete</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
@@ -29,6 +29,7 @@
         <button class="subtract">-</button>
         <button>0</button>
         <button class="dot">.</button>
+        <button class="equals">=</button>
       </div>
     </div>
 
